alignment of images fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,8 +43,8 @@ body {
 //   border-bottom: 1px solid $color4;
 // }
 .photo {
-  height: 300px;
-  width: 600px; 
+  height: 368px;
+  width: 260px; 
 }
 .home p {
   color: #000;
